<resources>
    <string name="app_name">AplicacionEjemplo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Strings related to login -->
    <string name="nombre">Nombres</string>
    <string name="apellidos">Apellidos</string>
    <string name="carrera">Carrera</string>
    <string name="ano">Año</string>
    <string name="button">Insertar</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>