<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EstudianteFragment">


    <EditText
        android:id="@+id/etNombres"
        android:layout_width="331dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/nombre"
        android:inputType="textPersonName"
        android:selectAllOnFocus="true" />

    <EditText
        android:id="@+id/etApellido"
        android:layout_width="331dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="140dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/apellidos"
        android:inputType="textPersonName"
        android:selectAllOnFocus="true" />

    <EditText
        android:id="@+id/etCarrera"
        android:layout_width="331dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="190dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/carrera"
        android:inputType="textPersonName"
        android:selectAllOnFocus="true" />

    <EditText
        android:id="@+id/etAno"
        android:layout_width="331dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="250dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/ano"
        android:inputType="textPersonName"
        android:selectAllOnFocus="true" />

    <Button
        android:id="@+id/login"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="350dp"
        android:layout_marginBottom="64dp"
        android:layout_marginHorizontal="50dp"
        android:text="@string/button" />

</FrameLayout>